Refactor configuration of the agent application